Added auth file

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,4 @@ VITE_APPWRITE_API_KEY=standard_2b833a00822206f8e1560d48a1ec10ad05de7ba8e47173d62
 VITE_APPWRITE_DATABASE_ID=68a1a0b0000f6129c74f
 VITE_APPWRITE_USERS_COLLECTION_ID=68a1a0d200357948ecd8
 VITE_APPWRITE_TRIPS_COLLECTION_ID=68a1a133002101201809
+VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
